# CS2_Website

./: CMakeLists.txt  README.md  comment.h  main.cpp  postmanager.h  website_home.html
Headers/: AVLTree.h  AuthManager.h  DatabaseManager.h  FriendshipManager.h  User.h  comment.h  post.h  postmanager.h  posts.h
src/: AVLTree.cpp  AuthManager.cpp  DatabaseManager.cpp  FriendshipManager.cpp  User.cpp  comment.cpp  post.cpp  postmanager.cpp  posts.cpp  test.cpp
src/managers/: FriendshipManager.cpp  FriendshipManager.h  postmanager.cpp
src/models/: AVLTree.h  User.cpp  User.h  comment.cpp
static/: Home.html  User.html  foryou.html  script.js  style.css  website_home.html
txtFiles/: posts.csv  users.csv
